--- a/styles.css
+++ b/styles.css
@@ -26,16 +26,14 @@ body{
 .nav-brand a{
     text-decoration: none;
     color: inherit;
-}
-
-.container{
-    /* padding: 0rem 1rem; */
+    font-size: larger;
+    font-weight: bold;
 }
 
 .container-center{
     max-width: 900px;
-  width: 100%;
-  margin: auto;
+    width: 100%;
+    margin: auto;
 }
 
 .list-non-bullet{
@@ -44,13 +42,13 @@ body{
 
 .list-item-inline{
     display: inline;
-    padding: 0rem 1.5rem;
+    /* padding: 0rem 0.5rem; */
 }
 
 .link{
     color: inherit;
     text-decoration: none;
-
+    /* margin-top: 1rem; */
 }
 
 .link-active{
@@ -59,7 +57,8 @@ body{
 
 .navigation .nav-pills {
     text-align: right;
-    margin: 0.6rem 1rem;
+    margin: 1vw 1vw;
+    /* margin: 0.6rem 0.5rem; */
   }
 
 .hder{
@@ -86,9 +85,10 @@ body{
 }
 
 .section{
-    padding: 2rem;
+    padding:1rem;
     text-align: center;
-    margin: 2rem 0;
+    margin: 1rem;
+    padding-bottom: 2rem;
     border-radius: 1rem;
 }
 
@@ -100,7 +100,7 @@ body{
     border-top-right-radius: 1rem;
     background-color: var(--primary-color);
     color: white;
-    padding: 2rem;
+    padding: 0.8rem;
     text-align: center;
 }
 
@@ -114,32 +114,35 @@ body{
 
 .link{
     box-sizing: border-box;
-    padding: 0.5rem 1rem;
+    padding: 0.5rem 0.5rem;    
+    margin: 1vw;
+}
+
+.section p{
+    margin-bottom: 1.5rem;
 }
 
 .link-primary{
     max-width: 140px;
     background-color: var(--primary-color);
     color: white;
-    border-radius: 1rem;
-
+    border-radius: 0.7rem;
 }
 
 .link-secondary{
     max-width: 140px;
-    margin: 1rem;
     color: var(--primary-color);
-    border-radius: 1rem;
+    border-radius: 0.7rem;
     border: 1px solid var(--primary-color);
 
 }
 
 .showcase-list {
-    /* padding: 2rem; */
-    padding: 2rem;
+     padding: 2rem;
     border-radius: 1rem;
     text-align: center;
-    margin: 3rem auto;
+    /* width: 100%; */
+    /* margin: auto;  */
   }
   .showcase-list h1 {
     margin: 0.5rem;
@@ -153,4 +156,8 @@ body{
   
   .showcase-blog {
     padding-bottom: 6rem;
+  }
+
+  h1{
+      margin: 0.5rem 0;
   }
